<resources>
    <string name="app_name">On Time</string>
    <string name="on_time">On.Time</string>
    <string name="always_on_time">Always on time</string>
    <string name="start">Start</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_schedule_page">SchedulePage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_history">notification_history</string>
    <string name="setting">Setting</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_new_note">Add new note</string>
    <string name="add_new_schedule">Add new schedule</string>
    <string name="note_options">Note options</string>
    <string name="schedule">Schedule</string>
    <string name="welcome_image">Welcome image</string>
    <string name="check">check</string>
    <string name="checkbox">checkbox</string>
    <string name="start_from">Start from</string>
    <string name="finish">Finish</string>
    <string name="place">Place</string>
    <string name="notes">Notes</string>
</resources>